fix overflow on jobrequest_dash, front_page.  fix job edit url

--- a/johnslist/dbtest/static/style.css
+++ b/johnslist/dbtest/static/style.css
@@ -1,3 +1,8 @@
+/* -------------- Front Page -------------*/
+.user_create_button {
+    font-size: 200%;
+    white-space: normal;
+}
 ::selection {
 	background: #ffb7b7; /* WebKit/Blink Browsers */
 }
@@ -327,3 +332,8 @@ background:#e1d8d8;
 /* #prev_tab { */
 /*     float: right; */
 /* } */
+
+/* ----------------- Job Request Dash ----------------- */
+.comment-body{
+    word-wrap: break-word;
+}
